# easy_logger

./: ChangeLog.md  README.md  pyproject.toml
easy_logger/: __init__.py  core.py  utils.py
wiki/: API-Reference.md  Configuration.md  Home.md  Migration-Guide.md
